[chromium] Updating WebGraphicsContext3D MemoryAllocation callback to accept a struct with have backbuffer suggestion. https://bugs.webkit.org/show_bug.cgi?id=81279

Patch by Michal Mocny <mmocny@google.com> on 2012-03-19
Reviewed by James Robinson.

Source/Platform:

Adding a suggestHaveBackbuffer hint to the WebGraphicsContext3D memory allocation callback.

* chromium/public/WebGraphicsContext3D.h:
(WebGraphicsMemoryAllocationChangedCallbackCHROMIUM):
(WebKit::WebGraphicsContext3D::WebGraphicsMemoryAllocationChangedCallbackCHROMIUM::onMemoryAllocationChanged):
* chromium/public/WebGraphicsMemoryAllocation.h: Added.
(WebKit):
(WebGraphicsMemoryAllocation):
(WebKit::WebGraphicsMemoryAllocation::WebGraphicsMemoryAllocation):

Source/WebCore:

* platform/graphics/chromium/Extensions3DChromium.h:
(GpuMemoryAllocationCHROMIUM):
(WebCore::Extensions3DChromium::GpuMemoryAllocationCHROMIUM::GpuMemoryAllocationCHROMIUM):
(GpuMemoryAllocationChangedCallbackCHROMIUM):

Source/WebKit/chromium:

* src/GraphicsContext3DChromium.cpp:
(WebCore::GrMemoryAllocationChangedCallback::onGpuMemoryAllocationChanged):
(WebCore::GraphicsContext3DMemoryAllocationChangedCallbackAdapter::onMemoryAllocationChanged):
(GraphicsContext3DMemoryAllocationChangedCallbackAdapter):

Canonical link: https://commits.webkit.org/98760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111216 268f45cc-cd09-0410-ab3c-d52691b4dbfc